{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 107,
  "lineage": "d933fb74-9da8-954d-d868-de038696235c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:590184012175:subnet/subnet-03ba200e1b43b9c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ba200e1b43b9c8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184012175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-07ae3d6b5f45aca85"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:590184012175:subnet/subnet-01eaa617acd72e83a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eaa617acd72e83a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184012175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-07ae3d6b5f45aca85"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:590184012175:vpc/vpc-07ae3d6b5f45aca85",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01db30c779e56ca59",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ca0364b09cfad3cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ae3d6b5f45aca85",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ad428ed61ed2d46",
            "owner_id": "590184012175"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mi_servidor_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aef57767f5404a3c",
            "arn": "arn:aws:ec2:eu-west-1:590184012175:instance/i-0a4f4366bfd6c8d91",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4f4366bfd6c8d91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e4aec1a194e4aed",
            "private_dns": "ip-172-31-40-146.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.146",
            "public_dns": "ec2-34-247-195-179.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.195.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5ea2f38dfb5a213",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mi_servidor_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ba200e1b43b9c8e",
            "tags": {
              "Name": "mi_server_1"
            },
            "tags_all": {
              "Name": "mi_server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ea4d09888ec66ba"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.mi_sg",
            "data.aws_subnet.az_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mi_servidor_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aef57767f5404a3c",
            "arn": "arn:aws:ec2:eu-west-1:590184012175:instance/i-0849aeb22efe2b631",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0849aeb22efe2b631",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059b78fb6cf749a10",
            "private_dns": "ip-172-31-1-254.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.254",
            "public_dns": "ec2-3-250-93-112.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.93.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dbeb3957aa8c72e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mi_servidor_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eaa617acd72e83a",
            "tags": {
              "Name": "mi_server_2"
            },
            "tags_all": {
              "Name": "mi_server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ea4d09888ec66ba"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.mi_sg",
            "data.aws_subnet.az_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:loadbalancer/app/terraform-alb/40d5f996c1e48b64",
            "arn_suffix": "app/terraform-alb/40d5f996c1e48b64",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-613886138.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:loadbalancer/app/terraform-alb/40d5f996c1e48b64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02727f7e2f58c381b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01eaa617acd72e83a"
              },
              {
                "subnet_id": "subnet-03ba200e1b43b9c8e"
              }
            ],
            "subnets": [
              "subnet-01eaa617acd72e83a",
              "subnet-03ba200e1b43b9c8e"
            ],
            "vpc_id": "vpc-07ae3d6b5f45aca85",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet.az_a",
            "data.aws_subnet.az_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:listener/app/terraform-alb/40d5f996c1e48b64/d5ded1dd19061d62",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:listener/app/terraform-alb/40d5f996c1e48b64/d5ded1dd19061d62",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:loadbalancer/app/terraform-alb/40d5f996c1e48b64",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "data.aws_subnet.az_a",
            "data.aws_subnet.az_b",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432",
            "arn_suffix": "targetgroup/terraforms-alb-target-group/c2d32474bbb33432",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraforms-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07ae3d6b5f45aca85"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mi_servidor_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432-20240722123416977500000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432",
            "target_id": "i-0a4f4366bfd6c8d91"
          },
          "dependencies": [
            "aws_instance.mi_servidor_1",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_security_group.mi_sg",
            "data.aws_subnet.az_a",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mi_servidor_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432-20240722123447254200000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:590184012175:targetgroup/terraforms-alb-target-group/c2d32474bbb33432",
            "target_id": "i-0849aeb22efe2b631"
          },
          "dependencies": [
            "aws_instance.mi_servidor_2",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_security_group.mi_sg",
            "data.aws_subnet.az_b",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:590184012175:security-group/sg-02727f7e2f58c381b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso alpuerto 8080 de las instancias",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-02727f7e2f58c381b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso alpuerto 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "malb-sg",
            "name_prefix": "",
            "owner_id": "590184012175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ae3d6b5f45aca85"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:590184012175:security-group/sg-05ea4d09888ec66ba",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05ea4d09888ec66ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Acceso alpuerto 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02727f7e2f58c381b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mi_servidor_sg",
            "name_prefix": "",
            "owner_id": "590184012175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ae3d6b5f45aca85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}